# app/controllers/api/v1/currencies_controller.rb
@@ -3,7 +3,11 @@ class Api::V1::CurrenciesController < ApplicationController
     result = ExecuteSearch.call(search_params)
 
     if result.present?
-      render json: result.as_json
+      if result[:errors]&.any?
+        render json: { message: result[:errors].map { |e| e[:message] }.join(', ') }, status: :unprocessable_entity
+      else
+        render json: result.as_json
+      end
     else
       render status: 404
     end
@@ -12,6 +16,6 @@ class Api::V1::CurrenciesController < ApplicationController
   private
 
   def search_params
-    params.permit(:name, :limit, :cursor).to_hash.merge(search_type: :currencies, expires_at: Time.now + 1.day)
+    params.permit(:name, :limit, :cursor, :sort).to_hash.merge(search_type: :currencies, expires_at: Time.now + 1.day)
   end
 end
