# app/controllers/api/v1/pairs_controller.rb
@@ -3,7 +3,11 @@ class Api::V1::PairsController < ApplicationController
     result = ExecuteSearch.call(search_params)
 
     if result.present?
-      render json: result.as_json
+      if result[:errors]&.any?
+        render json: { message: result[:errors].map { |e| e[:message] }.join(', ') }, status: :unprocessable_entity
+      else
+        render json: result.as_json
+      end
     else
       render status: 404
     end
@@ -18,6 +22,7 @@ class Api::V1::PairsController < ApplicationController
       :quote_currency,
       :status,
       :limit,
+      :sort,
       :cursor
     ).to_hash.merge(search_type: :pairs, expires_at: Time.now + 1.day)
   end
